feat: add direct QR code URL support for invoice generation
Allow providing direct URLs for online and certificate QR codes
instead of generating them from InvoiceQRCodeGeneratorRequest.
Each QR code (KOD I and KOD II) can be generated independently
from either direct URL or request, providing flexible configuration.

Refactored QrCodeBuilder to eliminate code duplication and improve
maintainability.