@@ -1,6 +1,8 @@
 package io.alapierre.ksef.fop.qr;
 
+import io.alapierre.ksef.fop.InvoiceGenerationParams;
 import io.alapierre.ksef.fop.InvoiceQRCodeGeneratorRequest;
+import io.alapierre.ksef.fop.InvoiceSchema;
 import io.alapierre.ksef.fop.i18n.TranslationService;
 import io.alapierre.ksef.fop.qr.enums.ContextIdentifierType;
 import io.alapierre.ksef.fop.qr.helpers.CertificateBuilders;
@@ -82,14 +84,16 @@ class QrCodeBuilderTest {
         QrCodeData resultPl = qrCodeBuilder.buildOnlineQr(req, null, testInvoiceXml, "pl");
         QrCodeData resultEn = qrCodeBuilder.buildOnlineQr(req, null, testInvoiceXml, "en");
 
+        assertNotNull(resultPl);
         assertNotNull(resultPl.getVerificationLinkTitle());
+        assertNotNull(resultEn);
         assertNotNull(resultEn.getVerificationLinkTitle());
         // Titles should be different for different languages
         assertNotEquals(resultPl.getVerificationLinkTitle(), resultEn.getVerificationLinkTitle());
     }
 
     @Test
-    void buildCertificateQr_shouldGenerateValidQrCode() throws Exception {
+    void buildCertificateQr_shouldGenerateValidQrCode() {
         CertificateBuilders.X500NameHolder x500 = new CertificateBuilders()
                 .buildForOrganization("Test Org", "VATPL-1234567890", "TestCN", "PL");
         TestCertificateGenerator generator = new TestCertificateGenerator();
@@ -117,7 +121,7 @@ class QrCodeBuilderTest {
     }
 
     @Test
-    void buildCertificateQr_shouldUseCorrectLanguage() throws Exception {
+    void buildCertificateQr_shouldUseCorrectLanguage() {
         CertificateBuilders.X500NameHolder x500 = new CertificateBuilders()
                 .buildForOrganization("Test Org", "1234567890", "TestCN", "PL");
         TestCertificateGenerator certGenerator = new TestCertificateGenerator();
@@ -135,7 +139,9 @@ class QrCodeBuilderTest {
         QrCodeData resultPl = qrCodeBuilder.buildCertificateQr(req, testInvoiceXml, "pl");
         QrCodeData resultEn = qrCodeBuilder.buildCertificateQr(req, testInvoiceXml, "en");
 
+        assertNotNull(resultPl);
         assertNotNull(resultPl.getVerificationLinkTitle());
+        assertNotNull(resultEn);
         assertNotNull(resultEn.getVerificationLinkTitle());
         // Titles should be different for different languages
         assertNotEquals(resultPl.getVerificationLinkTitle(), resultEn.getVerificationLinkTitle());
@@ -143,37 +149,320 @@ class QrCodeBuilderTest {
 
     @Test
     void qrFromLink_shouldCreateValidQrCodeData() {
+        // Test qrFromLink indirectly through buildOnlineQrCodeFromUrl
         String testLink = "https://qr-test.ksef.mf.gov.pl/web/verify/test";
         String testLabel = "Test Label";
-        String testTitle = "Test Title";
 
-        QrCodeData result = qrCodeBuilder.qrFromLink(testLink, testLabel, testTitle);
+        QrCodeData result = qrCodeBuilder.buildOnlineQrCodeFromUrl(testLink, testLabel, "pl");
 
         assertNotNull(result);
         assertEquals(testLink, result.getVerificationLink());
         assertEquals(testLabel, result.getLabel());
-        assertEquals(testTitle, result.getVerificationLinkTitle());
+        assertNotNull(result.getVerificationLinkTitle());
         assertNotNull(result.getQrCodeImage());
         assertTrue(result.getQrCodeImage().length > 0);
     }
 
     @Test
-    void buildQrCodes_onlineMode_shouldReturnSingleQrCode() {
+    void buildQrCodes_withRequest_onlineMode_shouldReturnSingleQrCode() {
         InvoiceQRCodeGeneratorRequest req = InvoiceQRCodeGeneratorRequest.onlineQrBuilder(
                 "https://qr-test.ksef.mf.gov.pl", "6891152920", LocalDate.of(2025, 10, 8));
 
-        List<QrCodeData> result = qrCodeBuilder.buildQrCodes(req, null, testInvoiceXml, "pl");
+        InvoiceGenerationParams params = InvoiceGenerationParams.builder()
+                .schema(InvoiceSchema.FA3_1_0_E)
+                .invoiceQRCodeGeneratorRequest(req)
+                .build();
+
+        List<QrCodeData> result = qrCodeBuilder.buildQrCodes(params, testInvoiceXml, "pl");
 
         assertNotNull(result);
         assertEquals(1, result.size());
-        assertNotNull(result.get(0));
-        assertTrue(result.get(0).getVerificationLink().contains("https://qr-test.ksef.mf.gov.pl"));
+        assertNotNull(result.getFirst());
+        assertTrue(result.getFirst().getVerificationLink().contains("https://qr-test.ksef.mf.gov.pl"));
     }
 
     @Test
-    void buildQrCodes_withNullRequest_shouldReturnNull() {
-        List<QrCodeData> result = qrCodeBuilder.buildQrCodes(null, null, testInvoiceXml, "pl");
+    void buildOnlineQrCodeFromUrl_withValidUrl_shouldGenerateQrCode() {
+        String url = "https://qr-test.ksef.mf.gov.pl/invoice/6891152920/08-10-2025/abc123";
+        String ksefNumber = "6891152920-20251008-010000B4CF64-9C";
 
-        assertNull(result);}
+        QrCodeData result = qrCodeBuilder.buildOnlineQrCodeFromUrl(url, ksefNumber, "pl");
+
+        assertNotNull(result);
+        assertEquals(url, result.getVerificationLink());
+        assertEquals(ksefNumber, result.getLabel());
+        assertNotNull(result.getVerificationLinkTitle());
+        assertNotNull(result.getQrCodeImage());
+        assertTrue(result.getQrCodeImage().length > 0);
+    }
+
+    @Test
+    void buildOnlineQrCodeFromUrl_withoutKsefNumber_shouldUseOfflineLabel() {
+        String url = "https://qr-test.ksef.mf.gov.pl/invoice/6891152920/08-10-2025/abc123";
+
+        QrCodeData result = qrCodeBuilder.buildOnlineQrCodeFromUrl(url, null, "pl");
+
+        assertNotNull(result);
+        assertEquals(url, result.getVerificationLink());
+        assertNotNull(result.getLabel());
+        assertNotEquals("", result.getLabel());
+        assertFalse(result.getLabel().trim().isEmpty());
+    }
+
+    @Test
+    void buildOnlineQrCodeFromUrl_withBlankKsefNumber_shouldUseOfflineLabel() {
+        String url = "https://qr-test.ksef.mf.gov.pl/invoice/6891152920/08-10-2025/abc123";
+
+        QrCodeData result = qrCodeBuilder.buildOnlineQrCodeFromUrl(url, "   ", "pl");
+
+        assertNotNull(result);
+        assertNotNull(result.getLabel());
+        assertFalse(result.getLabel().trim().isEmpty());
+    }
+
+    @Test
+    void buildOnlineQrCodeFromUrl_withNullUrl_shouldReturnNull() {
+        QrCodeData result = qrCodeBuilder.buildOnlineQrCodeFromUrl(null, null, "pl");
+
+        assertNull(result);
+    }
+
+    @Test
+    void buildOnlineQrCodeFromUrl_withBlankUrl_shouldReturnNull() {
+        QrCodeData result = qrCodeBuilder.buildOnlineQrCodeFromUrl("   ", null, "pl");
+
+        assertNull(result);
+    }
+
+    @Test
+    void buildOnlineQrCodeFromUrl_shouldTrimUrl() {
+        String url = "  https://qr-test.ksef.mf.gov.pl/invoice/test  ";
+        String expectedUrl = "https://qr-test.ksef.mf.gov.pl/invoice/test";
+
+        QrCodeData result = qrCodeBuilder.buildOnlineQrCodeFromUrl(url, null, "pl");
+
+        assertNotNull(result);
+        assertEquals(expectedUrl, result.getVerificationLink());
+    }
+
+    @Test
+    void buildOnlineQrCodeFromUrl_shouldUseCorrectLanguage() {
+        String url = "https://qr-test.ksef.mf.gov.pl/invoice/test";
+
+        QrCodeData resultPl = qrCodeBuilder.buildOnlineQrCodeFromUrl(url, null, "pl");
+        QrCodeData resultEn = qrCodeBuilder.buildOnlineQrCodeFromUrl(url, null, "en");
+
+        assertNotNull(resultPl);
+        assertNotNull(resultPl.getVerificationLinkTitle());
+        assertNotNull(resultEn);
+        assertNotNull(resultEn.getVerificationLinkTitle());
+        assertNotEquals(resultPl.getVerificationLinkTitle(), resultEn.getVerificationLinkTitle());
+    }
+
+    @Test
+    void buildCertificateQrCodeFromUrl_withValidUrl_shouldGenerateQrCode() {
+        String url = "https://qr-test.ksef.mf.gov.pl/certificate/Nip/6891152920/6891152920/01F20A5D352AE590/abc123/signature";
+
+        QrCodeData result = qrCodeBuilder.buildCertificateQrCodeFromUrl(url, "pl");
+
+        assertNotNull(result);
+        assertEquals(url, result.getVerificationLink());
+        assertNotNull(result.getLabel());
+        assertNotNull(result.getVerificationLinkTitle());
+        assertNotNull(result.getQrCodeImage());
+        assertTrue(result.getQrCodeImage().length > 0);
+    }
+
+    @Test
+    void buildCertificateQrCodeFromUrl_withNullUrl_shouldReturnNull() {
+        QrCodeData result = qrCodeBuilder.buildCertificateQrCodeFromUrl(null, "pl");
+
+        assertNull(result);
+    }
+
+    @Test
+    void buildCertificateQrCodeFromUrl_withBlankUrl_shouldReturnNull() {
+        QrCodeData result = qrCodeBuilder.buildCertificateQrCodeFromUrl("   ", "pl");
+
+        assertNull(result);
+    }
+
+    @Test
+    void buildCertificateQrCodeFromUrl_shouldTrimUrl() {
+        String url = "  https://qr-test.ksef.mf.gov.pl/certificate/test  ";
+        String expectedUrl = "https://qr-test.ksef.mf.gov.pl/certificate/test";
+
+        QrCodeData result = qrCodeBuilder.buildCertificateQrCodeFromUrl(url, "pl");
+
+        assertNotNull(result);
+        assertEquals(expectedUrl, result.getVerificationLink());
+    }
+
+    @Test
+    void buildCertificateQrCodeFromUrl_shouldUseCorrectLanguage() {
+        String url = "https://qr-test.ksef.mf.gov.pl/certificate/test";
+
+        QrCodeData resultPl = qrCodeBuilder.buildCertificateQrCodeFromUrl(url, "pl");
+        QrCodeData resultEn = qrCodeBuilder.buildCertificateQrCodeFromUrl(url, "en");
+
+        assertNotNull(resultPl);
+        assertNotNull(resultPl.getVerificationLinkTitle());
+        assertNotNull(resultEn);
+        assertNotNull(resultEn.getVerificationLinkTitle());
+        assertNotEquals(resultPl.getVerificationLinkTitle(), resultEn.getVerificationLinkTitle());
+    }
+
+    @Test
+    void buildQrCodes_withDirectOnlineUrl_shouldGenerateOnlineQrCode() {
+        String onlineUrl = "https://qr-test.ksef.mf.gov.pl/invoice/6891152920/08-10-2025/abc123";
+        String ksefNumber = "6891152920-20251008-010000B4CF64-9C";
+
+        InvoiceGenerationParams params = InvoiceGenerationParams.builder()
+                .schema(InvoiceSchema.FA3_1_0_E)
+                .onlineQrCodeUrl(onlineUrl)
+                .ksefNumber(ksefNumber)
+                .build();
+
+        List<QrCodeData> result = qrCodeBuilder.buildQrCodes(params, testInvoiceXml, "pl");
+
+        assertNotNull(result);
+        assertEquals(1, result.size());
+        assertEquals(onlineUrl, result.getFirst().getVerificationLink());
+        assertEquals(ksefNumber, result.getFirst().getLabel());
+    }
+
+    @Test
+    void buildQrCodes_withDirectCertificateUrl_shouldGenerateCertificateQrCode() {
+        String certificateUrl = "https://qr-test.ksef.mf.gov.pl/certificate/test";
+
+        InvoiceGenerationParams params = InvoiceGenerationParams.builder()
+                .schema(InvoiceSchema.FA3_1_0_E)
+                .certificateQrCodeUrl(certificateUrl)
+                .build();
+
+        List<QrCodeData> result = qrCodeBuilder.buildQrCodes(params, testInvoiceXml, "pl");
+
+        assertNotNull(result);
+        assertEquals(1, result.size());
+        assertEquals(certificateUrl, result.getFirst().getVerificationLink());
+        assertTrue(result.getFirst().getVerificationLink().contains("/certificate/"));
+    }
+
+    @Test
+    void buildQrCodes_withBothDirectUrls_shouldGenerateBothQrCodes() {
+        String onlineUrl = "https://qr-test.ksef.mf.gov.pl/invoice/test";
+        String certificateUrl = "https://qr-test.ksef.mf.gov.pl/certificate/test";
+
+        InvoiceGenerationParams params = InvoiceGenerationParams.builder()
+                .schema(InvoiceSchema.FA3_1_0_E)
+                .onlineQrCodeUrl(onlineUrl)
+                .certificateQrCodeUrl(certificateUrl)
+                .build();
+
+        List<QrCodeData> result = qrCodeBuilder.buildQrCodes(params, testInvoiceXml, "pl");
+
+        assertNotNull(result);
+        assertEquals(2, result.size());
+        assertEquals(onlineUrl, result.get(0).getVerificationLink());
+        assertEquals(certificateUrl, result.get(1).getVerificationLink());
+    }
+
+    @Test
+    void buildQrCodes_withOnlineUrlAndRequest_shouldUseUrlForOnlineAndRequestForCertificate() {
+        String onlineUrl = "https://qr-test.ksef.mf.gov.pl/invoice/test";
+        CertificateBuilders.X500NameHolder x500 = new CertificateBuilders()
+                .buildForOrganization("Test Org", "VATPL-1234567890", "TestCN", "PL");
+        TestCertificateGenerator generator = new TestCertificateGenerator();
+        SelfSignedCertificate cert = generator.generateSelfSignedCertificateEcdsa(x500);
+
+        InvoiceQRCodeGeneratorRequest request = InvoiceQRCodeGeneratorRequest.offlineCertificateQrBuilder(
+                "https://qr-test.ksef.mf.gov.pl",
+                ContextIdentifierType.NIP,
+                "6891152920",
+                "6891152920",
+                "01F20A5D352AE590",
+                cert.getPrivateKey(),
+                LocalDate.of(2025, 10, 8));
+
+        InvoiceGenerationParams params = InvoiceGenerationParams.builder()
+                .schema(InvoiceSchema.FA3_1_0_E)
+                .onlineQrCodeUrl(onlineUrl)
+                .invoiceQRCodeGeneratorRequest(request)
+                .build();
+
+        List<QrCodeData> result = qrCodeBuilder.buildQrCodes(params, testInvoiceXml, "pl");
+
+        assertNotNull(result);
+        assertEquals(2, result.size());
+        assertEquals(onlineUrl, result.get(0).getVerificationLink());
+        assertTrue(result.get(1).getVerificationLink().contains("/certificate/"));
+    }
+
+    @Test
+    void buildQrCodes_withRequestAndCertificateUrl_shouldUseRequestForOnlineAndUrlForCertificate() {
+        String certificateUrl = "https://qr-test.ksef.mf.gov.pl/certificate/test";
+        InvoiceQRCodeGeneratorRequest request = InvoiceQRCodeGeneratorRequest.onlineQrBuilder(
+                "https://qr-test.ksef.mf.gov.pl", "6891152920", LocalDate.of(2025, 10, 8));
+
+        InvoiceGenerationParams params = InvoiceGenerationParams.builder()
+                .schema(InvoiceSchema.FA3_1_0_E)
+                .certificateQrCodeUrl(certificateUrl)
+                .invoiceQRCodeGeneratorRequest(request)
+                .build();
+
+        List<QrCodeData> result = qrCodeBuilder.buildQrCodes(params, testInvoiceXml, "pl");
+
+        assertNotNull(result);
+        assertEquals(2, result.size());
+        assertTrue(result.get(0).getVerificationLink().contains("/invoice/"));
+        assertEquals(certificateUrl, result.get(1).getVerificationLink());
+    }
+
+    @Test
+    void buildQrCodes_withRequestOnly_shouldGenerateFromRequest() {
+        InvoiceQRCodeGeneratorRequest request = InvoiceQRCodeGeneratorRequest.onlineQrBuilder(
+                "https://qr-test.ksef.mf.gov.pl", "6891152920", LocalDate.of(2025, 10, 8));
+
+        InvoiceGenerationParams params = InvoiceGenerationParams.builder()
+                .schema(InvoiceSchema.FA3_1_0_E)
+                .invoiceQRCodeGeneratorRequest(request)
+                .build();
+
+        List<QrCodeData> result = qrCodeBuilder.buildQrCodes(params, testInvoiceXml, "pl");
+
+        assertNotNull(result);
+        assertEquals(1, result.size());
+        assertTrue(result.getFirst().getVerificationLink().contains("https://qr-test.ksef.mf.gov.pl"));
+    }
+
+    @Test
+    void buildQrCodes_withNoUrlsAndNoRequest_shouldReturnNull() {
+        InvoiceGenerationParams params = InvoiceGenerationParams.builder()
+                .schema(InvoiceSchema.FA3_1_0_E)
+                .build();
+
+        List<QrCodeData> result = qrCodeBuilder.buildQrCodes(params, testInvoiceXml, "pl");
+
+        assertNull(result);
+    }
+
+    @Test
+    void buildQrCodes_withBlankUrls_shouldFallbackToRequest() {
+        InvoiceQRCodeGeneratorRequest request = InvoiceQRCodeGeneratorRequest.onlineQrBuilder(
+                "https://qr-test.ksef.mf.gov.pl", "6891152920", LocalDate.of(2025, 10, 8));
+
+        InvoiceGenerationParams params = InvoiceGenerationParams.builder()
+                .schema(InvoiceSchema.FA3_1_0_E)
+                .onlineQrCodeUrl("   ")
+                .certificateQrCodeUrl("   ")
+                .invoiceQRCodeGeneratorRequest(request)
+                .build();
+
+        List<QrCodeData> result = qrCodeBuilder.buildQrCodes(params, testInvoiceXml, "pl");
+
+        assertNotNull(result);
+        assertEquals(1, result.size());
+        assertTrue(result.getFirst().getVerificationLink().contains("https://qr-test.ksef.mf.gov.pl"));
+    }
 
 }
